--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -104,7 +104,9 @@
     "couldnt-find-a-room": "تعذر العثور على غرفة بهذا الاسم",
     "approved-services": "الخدمات الموافق عليها",
     "no-approved-or-active-services-in-this-room": "لا توجد خدمات معتمدة أو نشطة في هذه الغرفة",
-    "book-now":"احجز الآن"
+    "book-now": "احجز الآن",
+    "room-already-booked": "لقد تمت الموافقة على هذا الحجز مسبقًا. لا يمكن عرض تفاصيل الغرفة."
+    
   },
   "reservation": {
     "reservations": "الحجوزات",
@@ -116,164 +118,180 @@
     "approve-reservation": "الموافقة على الحجز",
     "reject-reservation": "رفض الحجز",
     "no-reservations": "لا يوجد حجوزات حاليا",
-    "does-not-have-any-reservations": "ليس لديه أي حجوزات حتى الآن"
+    "does-not-have-any-reservations": "ليس لديه أي حجوزات حتى الآن",
+    "room-image": "صورة الغرفة",
+    "type": "النوع",
+    "hotel": "الفندق",
+    "date": "التاريخ",
+    "payment": "الدفع",
+    "cancel": "إلغاء الحجز",
+    "view-services": "عرض الخدمات",
+    "status": {
+      "stat":"الحالة",
+      "pending": "قيد الانتظار",
+      "approved": "مقبول",
+      "rejected": "مرفوض"
+    },
+  "view-room-details": "عرض تفاصيل الغرفة"
   },
-  "service": {
-    "services": "الخدمات",
-    "type": "نوع الخدمة",
-    "edit-service": "تعديل الخدمة",
-    "delete-service": "حذف الخدمة",
-    "no-available-services": "لا يوجد خدمات متاحة حاليا",
-    "approve-request": "الموافقة على الطلب",
-    "complete-request": "إكمال الطلب",
-    "there-are-no-requests": "لا توجد طلبات حاليا.",
-    "there-are-no-services": "لا توجد خدمات حاليا.",
-    "pending-requests": "طلبات منتظرة",
-    "active-requests": "طلبات نشطة",
-    "completed-requests": "طلبات المكتملة",
-    "add-service": "إضافة خدمة",
-    "you-dont-have-services-to-provide": "لا يوجد لديك خدمات لتقدمها",
-    "service-type-required": "نوع الخدمة مطلوب",
-    "does-not-have-any-services": "ليس لديه أي خدمات حتى الآن"
-  },
-  "footer": {
-    "english": "الإنجليزية",
-    "arabic": "العربية"
-  },
-  "dashboard": {
-    "system-overview": "نظرة عامة على النظام",
-    "total-employees": "إجمالي الموظفين",
-    "total-customers": "إجمالي الزبائن",
-    "total-rooms": "إجمالي الغرف",
-    "total-reservations": "إجمالي الحجوزات",
-    "total-services": "إجمالي الخدمات",
-    "total-services-requests": "إجمالي طلبات للخدمات",
-    "performance-metrics": "مقاييس الأداء",
-    "avg-services-per-employee": "متوسط الخدمات لكل موظف",
-    "avg-reservations-per-day": "متوسط الحجوزات في اليوم",
-    "avg-requests-per-day": "متوسط الطلبات في اليوم الواحد",
-    "highlights": "أبرز الملامح",
-    "employee-of-the-month": "موظف الشهر",
-    "top-selling-service": "الخدمة الأكثر مبيعاً",
-    "most-booked-room-type": "نوع الغرفة الأكثر حجزاً",
-    "reservations": "الحجوزات",
-    "reservations-status": "حالة الحجوزات",
-    "requests-status": "حالة الطلبات",
-    "requests": "الطلبات الخدمات"
-  },
-  "shared": {
-    "entity": {
-      "id": "الرقم التعريفي"
+    "service": {
+      "services": "الخدمات",
+      "type": "نوع الخدمة",
+      "edit-service": "تعديل الخدمة",
+      "delete-service": "حذف الخدمة",
+      "no-available-services": "لا يوجد خدمات متاحة حاليا",
+      "approve-request": "الموافقة على الطلب",
+      "complete-request": "إكمال الطلب",
+      "there-are-no-requests": "لا توجد طلبات حاليا.",
+      "there-are-no-services": "لا توجد خدمات حاليا.",
+      "pending-requests": "طلبات منتظرة",
+      "active-requests": "طلبات نشطة",
+      "completed-requests": "طلبات المكتملة",
+      "add-service": "إضافة خدمة",
+      "you-dont-have-services-to-provide": "لا يوجد لديك خدمات لتقدمها",
+      "service-type-required": "نوع الخدمة مطلوب",
+      "does-not-have-any-services": "ليس لديه أي خدمات حتى الآن"
     },
-    "button": {
-      "signup": "الاشترك",
-      "login": "تسجيل الدخول",
-      "go-back-to-home-page": "الرجوع الى الصفخة الرئيسية",
-      "details": "التفاصيل",
-      "approve": "الموافقة",
-      "reject": "رفض",
-      "fire": "طرد",
-      "add": "إضافة",
-      "update": "تحديث",
-      "submit": "إرسال",
-      "cancel": "إلغاء",
-      "go-back": "العودة"
+    "footer": {
+      "english": "الإنجليزية",
+      "arabic": "العربية"
     },
-    "form": {
-      "input-invalid": "المعطى غير صالح",
-      "name": "الاسم",
-      "name-required": "الاسم مطلوب",
-      "name-minlength": "يجب أن يحتوي الاسم على 3 أحرف على الأقل",
-      "name-maxlength": "يجب ألا يزيد الاسم عن 20 حرفاً",
-      "name-invalid": "اسم غير صالح",
-      "email": "البريد الإلكتروني",
-      "email-required": "البريد الإلكتروني مطلوب",
-      "email-invalid": "عنوان بريد إلكتروني غير صالح",
-      "email-not-found": "البريد الإلكتروني غير موجود",
-      "phone": "الهاتف",
-      "phone-required": "الهاتف مطلوب",
-      "password": "كلمة المرور",
-      "new-password": "كلمة المرور الجديدة",
-      "password-required": "كلمة المرور مطلوبة",
-      "password-pattern": "يجب أن تحتوي كلمة المرور على 6 أحرف على الأقل، حرف كبير وحرف صغير وحرف رقمي وحرف خاص",
-      "password-invalid": "كلمة مرور غير صالحة",
-      "confirm-password": "تأكيد كلمة المرور",
-      "confirmation-required": "مطلوب تأكيد كلمة المرور",
-      "password-match": "يجب أن تتطابق كلمات المرور",
-      "title": "العنوان",
-      "title-required": "العنوان مطلوب",
-      "title-minlength": "يجب أن يحتوي العنوان على 4 أحرف على الأقل",
-      "title-maxlength": "يجب ألا يتجاوز العنوان 30 حرفاً",
-      "title-invalid": "عنوان غير صالح",
-      "type": "النوع",
-      "details": "التفاصيل",
-      "details-required": "التفاصيل مطلوبة",
-      "details-minlength": "يجب أن تحتوي التفاصيل على 10 أحرف على الأقل",
-      "details-maxlength": "يجب ألا تزيد التفاصيل عن 30 حرفاً",
-      "price": "السعر",
-      "price-required": "السعر مطلوب",
-      "price-max": "يجب ألا يزيد السعر عن 9999.99",
-      "price-invalid": "السعر غير صالح",
-      "image": "الصورة",
-      "image-required": "الصورة مطلوبة",
-      "image-invalid": "نوع الصورة غير صالح، يمكنك رفع ملف .png أو .jpg أو .jpeg أو .gif",
-      "image-max": "يجب ألا يتجاوز حجم الصورة 2 ميغابايت",
-      "hotel": "الفندق",
-      "hotel-required": "اسم الفندق مطلوب",
-      "hotel-minlength": "يجب أن يحتوي اسم الفندق على حرفين على الأقل",
-      "hotel-maxlength": "يجب ألا يزيد اسم الفندق عن 30 حرفاً",
-      "location-minlength": "يجب أن يحتوي وصف الموقع على 20 على الأقل"
+    "dashboard": {
+      "system-overview": "نظرة عامة على النظام",
+      "total-employees": "إجمالي الموظفين",
+      "total-customers": "إجمالي الزبائن",
+      "total-rooms": "إجمالي الغرف",
+      "total-reservations": "إجمالي الحجوزات",
+      "total-services": "إجمالي الخدمات",
+      "total-services-requests": "إجمالي طلبات للخدمات",
+      "performance-metrics": "مقاييس الأداء",
+      "avg-services-per-employee": "متوسط الخدمات لكل موظف",
+      "avg-reservations-per-day": "متوسط الحجوزات في اليوم",
+      "avg-requests-per-day": "متوسط الطلبات في اليوم الواحد",
+      "highlights": "أبرز الملامح",
+      "employee-of-the-month": "موظف الشهر",
+      "top-selling-service": "الخدمة الأكثر مبيعاً",
+      "most-booked-room-type": "نوع الغرفة الأكثر حجزاً",
+      "reservations": "الحجوزات",
+      "reservations-status": "حالة الحجوزات",
+      "requests-status": "حالة الطلبات",
+      "requests": "الطلبات الخدمات"
     },
-    "toast": {
-      "success": "نجاح",
-      "warning": "تحذير",
-      "error": "خطأ",
-      "something-went-wrong": "لقد حدث خطأ ما !!!",
-      "profile-updated-successfuly": "تم تحديث الملف الشخصي بنجاح!",
-      "failed-to-upload-image": "فشل تحميل الصورة!",
-      "at-least-one-image-is-required": "مطلوب صورة واحدة على الأقل!",
-      "room-added-successfuly": "تمت إضافة الغرفة بنجاح!",
-      "room-updated-successfuly": "تم تحديث الغرفة بنجاح!",
-      "room-removed": "تمت إزالة الغرفة!",
-      "reservation-approved": "تمت الموافقة على الحجز!",
-      "reservation-rejected": "تم رفض الحجز!",
-      "service-added-successfuly": "تمت إضافة الخدمة بنجاح!",
-      "service-updated-successfuly": "تم تحديث الخدمة بنجاح!",
-      "service-request-completed": "تم إنجاز طلب الخدمة!",
-      "service-request-approved": "تمت الموافقة على طلب الخدمة!",
-      "employee-has-active-services": "الموظف لديه خدمات نشطة!",
-      "cannot-fire": "لا يمكن طرد",
-      "employee-fired": "تم فصل الموظف!",
-      "login-first": "يرجى تسجيل الدخول أولاً!",
-      "already-sent-a-booking-request": "لقد أرسلت بالفعل طلب حجز لـ",
-      "booked-waiting-for-admin-approval": "تم الحجز! في انتظار موافقة الإدارة.",
-      "booked-but-failed-to-update-status": "تم حجز الغرفة ولكن لم يتم تحديث الحالة.",
-      "error-getting-reservations": "حدث خطأ في الحصول على الحجوزات",
-      "no-room-selected-or-user-found": "لم يتم تحديد غرفة أو لم يتم العثور على المستخدم",
-      "service-request-submitted-successfully": "تم تقديم طلب الخدمة بنجاح!",
-      "reservation-cancelled": "تم إلغاء الحجز",
-      "login-successful": "تم تسجيل الدخول بنجاح!",
-      "email-already-exists": "البريد الإلكتروني موجود بالفعل!",
-      "registered-successfully":"تم التسجيل بنجاح!"
-    },
-    "confirm-dialog": {
-      "delete": "حذف",
-      "reject": "رفض",
-      "fire": "طرد",
-      "cancel": "إلغاء",
-      "reject-reservation": "رفض الحجز",
-      "confirm-reject-reservation-question": "هل أنت متأكد من رغبتك في رفض هذا الحجز؟",
-      "remove-service": "إزالة الخدمة",
-      "confirm-remove-service-question": "هل أنت متأكد من رغبتك في إزالة هذه الخدمة؟",
-      "remove-room": "إزالة الغرفة",
-      "confirm-remove-room-question": "هل أنت متأكد من رغبتك في إزالة هذه الغرفة؟",
-      "fire-employee": "طرد الموظف ",
-      "confirm-fire-employee-question": "هل أنت متأكد أنك تريد طرد"
-    },
-    "filter": {
-      "search": "البحث باسم الغرفة...",
-      "sort-by": "فرز حسب"
-    },
-    "key-name": "الإجراءات"
+    "shared": {
+      "entity": {
+        "id": "الرقم التعريفي"
+      },
+      "button": {
+        "signup": "الاشترك",
+        "login": "تسجيل الدخول",
+        "go-back-to-home-page": "الرجوع الى الصفخة الرئيسية",
+        "details": "التفاصيل",
+        "approve": "الموافقة",
+        "reject": "رفض",
+        "fire": "طرد",
+        "add": "إضافة",
+        "update": "تحديث",
+        "submit": "إرسال",
+        "cancel": "إلغاء",
+        "go-back": "العودة"
+      },
+      "form": {
+        "input-invalid": "المعطى غير صالح",
+        "name": "الاسم",
+        "name-required": "الاسم مطلوب",
+        "name-minlength": "يجب أن يحتوي الاسم على 3 أحرف على الأقل",
+        "name-maxlength": "يجب ألا يزيد الاسم عن 20 حرفاً",
+        "name-invalid": "اسم غير صالح",
+        "email": "البريد الإلكتروني",
+        "email-required": "البريد الإلكتروني مطلوب",
+        "email-invalid": "عنوان بريد إلكتروني غير صالح",
+        "email-not-found": "البريد الإلكتروني غير موجود",
+        "phone": "الهاتف",
+        "phone-required": "الهاتف مطلوب",
+        "password": "كلمة المرور",
+        "new-password": "كلمة المرور الجديدة",
+        "password-required": "كلمة المرور مطلوبة",
+        "password-pattern": "يجب أن تحتوي كلمة المرور على 6 أحرف على الأقل، حرف كبير وحرف صغير وحرف رقمي وحرف خاص",
+        "password-invalid": "كلمة مرور غير صالحة",
+        "confirm-password": "تأكيد كلمة المرور",
+        "confirmation-required": "مطلوب تأكيد كلمة المرور",
+        "password-match": "يجب أن تتطابق كلمات المرور",
+        "title": "العنوان",
+        "title-required": "العنوان مطلوب",
+        "title-minlength": "يجب أن يحتوي العنوان على 4 أحرف على الأقل",
+        "title-maxlength": "يجب ألا يتجاوز العنوان 30 حرفاً",
+        "title-invalid": "عنوان غير صالح",
+        "type": "النوع",
+        "details": "التفاصيل",
+        "details-required": "التفاصيل مطلوبة",
+        "details-minlength": "يجب أن تحتوي التفاصيل على 10 أحرف على الأقل",
+        "details-maxlength": "يجب ألا تزيد التفاصيل عن 30 حرفاً",
+        "price": "السعر",
+        "price-required": "السعر مطلوب",
+        "price-max": "يجب ألا يزيد السعر عن 9999.99",
+        "price-invalid": "السعر غير صالح",
+        "image": "الصورة",
+        "image-required": "الصورة مطلوبة",
+        "image-invalid": "نوع الصورة غير صالح، يمكنك رفع ملف .png أو .jpg أو .jpeg أو .gif",
+        "image-max": "يجب ألا يتجاوز حجم الصورة 2 ميغابايت",
+        "hotel": "الفندق",
+        "hotel-required": "اسم الفندق مطلوب",
+        "hotel-minlength": "يجب أن يحتوي اسم الفندق على حرفين على الأقل",
+        "hotel-maxlength": "يجب ألا يزيد اسم الفندق عن 30 حرفاً",
+        "location-minlength": "يجب أن يحتوي وصف الموقع على 20 على الأقل"
+      },
+      "toast": {
+        "success": "نجاح",
+        "warning": "تحذير",
+        "error": "خطأ",
+        "something-went-wrong": "لقد حدث خطأ ما !!!",
+        "profile-updated-successfuly": "تم تحديث الملف الشخصي بنجاح!",
+        "failed-to-upload-image": "فشل تحميل الصورة!",
+        "at-least-one-image-is-required": "مطلوب صورة واحدة على الأقل!",
+        "room-added-successfuly": "تمت إضافة الغرفة بنجاح!",
+        "room-updated-successfuly": "تم تحديث الغرفة بنجاح!",
+        "room-removed": "تمت إزالة الغرفة!",
+        "reservation-approved": "تمت الموافقة على الحجز!",
+        "reservation-rejected": "تم رفض الحجز!",
+        "service-added-successfuly": "تمت إضافة الخدمة بنجاح!",
+        "service-updated-successfuly": "تم تحديث الخدمة بنجاح!",
+        "service-request-completed": "تم إنجاز طلب الخدمة!",
+        "service-request-approved": "تمت الموافقة على طلب الخدمة!",
+        "employee-has-active-services": "الموظف لديه خدمات نشطة!",
+        "cannot-fire": "لا يمكن طرد",
+        "employee-fired": "تم فصل الموظف!",
+        "login-first": "يرجى تسجيل الدخول أولاً!",
+        "already-sent-a-booking-request": "لقد أرسلت بالفعل طلب حجز لـ",
+        "booked-waiting-for-admin-approval": "تم الحجز! في انتظار موافقة الإدارة.",
+        "booked-but-failed-to-update-status": "تم حجز الغرفة ولكن لم يتم تحديث الحالة.",
+        "error-getting-reservations": "حدث خطأ في الحصول على الحجوزات",
+        "no-room-selected-or-user-found": "لم يتم تحديد غرفة أو لم يتم العثور على المستخدم",
+        "service-request-submitted-successfully": "تم تقديم طلب الخدمة بنجاح!",
+        "reservation-cancelled": "تم إلغاء الحجز",
+        "login-successful": "تم تسجيل الدخول بنجاح!",
+        "email-already-exists": "البريد الإلكتروني موجود بالفعل!",
+        "registered-successfully": "تم التسجيل بنجاح!",
+         "status-updated-to-booked": "تم تحديث حالة الغرفة إلى 'Booked'."
+      },
+      "confirm-dialog": {
+        "delete": "حذف",
+        "reject": "رفض",
+        "fire": "طرد",
+        "cancel": "إلغاء",
+        "reject-reservation": "رفض الحجز",
+        "confirm-reject-reservation-question": "هل أنت متأكد من رغبتك في رفض هذا الحجز؟",
+        "remove-service": "إزالة الخدمة",
+        "confirm-remove-service-question": "هل أنت متأكد من رغبتك في إزالة هذه الخدمة؟",
+        "remove-room": "إزالة الغرفة",
+        "confirm-remove-room-question": "هل أنت متأكد من رغبتك في إزالة هذه الغرفة؟",
+        "fire-employee": "طرد الموظف ",
+        "confirm-fire-employee-question": "هل أنت متأكد أنك تريد طرد"
+      },
+      "filter": {
+        "search": "البحث باسم الغرفة...",
+        "sort-by": "فرز حسب"
+      },
+      "key-name": "الإجراءات"
+    }
   }
-}
+
