Sort Reservations, Improve Style, and Add An Option To Rebook A Room

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -126,7 +126,7 @@
     "type": "النوع",
     "hotel": "الفندق",
     "date": "التاريخ",
-    "payment": "الدفع",
+    "price": "السعر",
     "cancel": "إلغاء الحجز",
     "view-services": "عرض الخدمات",
     "status": {
@@ -135,7 +135,9 @@
       "approved": "مقبول",
       "rejected": "مرفوض"
     },
-    "view-room-details": "عرض تفاصيل الغرفة"
+    "details": "التفاصيل",
+    "check-out": "الدفع",
+    "book-again": "احجز مرة اخرى"
   },
   "service": {
     "services": "الخدمات",
