add translation for checout and toast

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -135,7 +135,22 @@
       "approved": "Approved",
       "rejected": "rejected"
     },
-    "view-room-details": "View Room Details"
+    "view-room-details": "View Room Details",
+    "checkout": "Checkout"
+  },
+  "checkout": {
+    "title": "Checkout Summary",
+    "room": "Room",
+    "price-per-night": "Price per Night",
+    "nights-stayed": "Nights Stayed",
+    "room-cost": "Room Cost",
+    "approved-services": "Approved Services",
+    "no-approved-services": "No approved services.",
+    "services-cost": "Services Cost",
+    "total-amount": "Total Amount",
+    "pay-now": "Pay Now",
+    "paid": "Paid",
+    "payment-completed": "Payment has been completed."
   },
   "service": {
     "services": "Services",
@@ -294,7 +309,14 @@
       "login-successful": "Login successful!",
       "email-already-exists": "Email already exists!",
       "registered-successfully": "Registered successfully!",
-      "status-updated-to-booked": " Status updated to booked!"
+      "status-updated-to-booked": " Status updated to booked!",
+      "no-booked-room-title": "No Booked Room",
+      "no-booked-room-message": "You must have a booked room to access available services.",
+      "payment-success-title": "Payment Successful",
+      "payment-success-detail": "You paid {{amount}} JOD",
+      "payment-failed-title": "Payment Failed",
+      "payment-missing-info": "Missing reservation or user information.",
+      "payment-error": "An error occurred while processing payment."
     },
     "confirm-dialog": {
       "delete": "Delete",
