--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -107,7 +107,7 @@
     "no-available-rooms": "لا يوجد غرف متاحة حاليا.",
     "couldnt-find-a-room": "تعذر العثور على غرفة بهذا الاسم",
     "room-services": "خدمات الغرفة",
-    "no-approved-or-active-services-in-this-room": "لا توجد خدمات معتمدة أو نشطة في هذه الغرفة",
+    "no-services-in-this-room": "لا توجد خدمات طلبت في هذه الغرفة",
     "book-now": "احجز الآن",
     "room-already-booked": "لقد تمت الموافقة على هذا الحجز مسبقًا. لا يمكن عرض تفاصيل الغرفة.",
     "all": "جميع الغرف"
