--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -234,7 +234,9 @@
       "update": "Update",
       "submit": "Submit",
       "cancel": "Cancel",
-      "go-back": "Go Back"
+      "go-back": "Go Back",
+      "edit-phone-number": "Edit Phone Number",
+      "save": "Save"
     },
     "form": {
       "input-invalid": "Invalid input",
@@ -286,7 +288,7 @@
       "warning": "Warning",
       "error": "Error",
       "something-went-wrong": "Something went wrong!!",
-      "profile-udpated-successfuly": "Profile udpated successfully!",
+      "profile-updated-successfully": "Profile updated successfully!",
       "failed-to-upload-image": "Failed to upload image!",
       "at-least-one-image-is-required": "At least one image is required!",
       "room-added-successfuly": "Room added successfully!",
@@ -319,7 +321,11 @@
       "payment-success-detail": "You paid {{amount}} JOD",
       "payment-failed-title": "Payment Failed",
       "payment-missing-info": "Missing reservation or user information.",
-      "payment-error": "An error occurred while processing payment."
+      "payment-error": "An error occurred while processing payment.",
+      "invalid-phone-number": "Invalid phone number. It should be 10 digits long and start with 07.",
+      "phone-number-updated": "Phone number updated successfully!",
+      "failed-to-update-phone": "Failed to update phone number."
+      
     },
     "confirm-dialog": {
       "delete": "Delete",
