Add More Room Types

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -83,7 +83,12 @@
     "rooms": "الغرف",
     "type": "النوع",
     "room": "غرفة",
+    "single": "مفرد",
+    "double": "مزدوج",
+    "family": "عائلي",
     "hall": "قاعة",
+    "suite": "جناح",
+    "deluxe": "فاخر",
     "capacity": "السعة",
     "floor": "الطابق",
     "hotel": "الفندق",
