--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -83,7 +83,12 @@
     "rooms": "Rooms",
     "type": "Type",
     "room": "Room",
+    "single": "Single",
+    "double": "Double",
+    "family": "Family",
     "hall": "Hall",
+    "suite": "Suite",
+    "deluxe": "Deluxe",
     "capacity": "Capacity",
     "floor": "Floor",
     "hotel": "Hotel",
