--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -296,6 +296,7 @@
       "profile-updated-successfully": "Profile updated successfully!",
       "failed-to-upload-image": "Failed to upload image!",
       "at-least-one-image-is-required": "At least one image is required!",
+      "employee-added-successfuly": "Employee added successfully!",
       "room-added-successfuly": "Room added successfully!",
       "room-updated-successfuly": "Room updated successfully!",
       "room-removed": "Room Removed!",
