--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -286,7 +286,8 @@
       "hotel-required": "Hotel Name Required",
       "hotel-minlength": "Hotel name should conain at least 2 letters",
       "hotel-maxlength": "Hotel name should not exceed 30 characters",
-      "location-minlength": "Location Discription should conain at least 10 characters"
+      "location-minlength": "Location Discription should conain at least 10 characters",
+      "reservation-duration": "Reservation Duration"
     },
     "toast": {
       "success": "Success",
@@ -331,7 +332,8 @@
       "invalid-phone-number": "Invalid phone number. It should be 10 digits long and start with 07.",
       "phone-number-updated": "Phone number updated successfully!",
       "failed-to-update-phone": "Failed to update phone number.",
-      "no-new-data-to-update": "No new data to update"
+      "no-new-data-to-update": "No new data to update",
+      "select-date": "Please Select One Date at Least"
     },
     "confirm-dialog": {
       "delete": "Delete",
